# msds-backend

./: .gitignore  main.py  pyproject.toml
app/: loader.py  loader_pdf.py  qa_engine.py  retriever.py  section_picker.py
app/data/sds_text/: ESPL-Ampol-Australia-Petroleum-Pty-Ltd-Aus-En-240625-22.txt  ESPL-Ampol-Australia-Petroleum-Pty-Ltd-Aus-En-240625-9.txt  ESPL-Aurion-Nld-En-140225-14.txt  ESPL-Aurion-Nld-En-140225-5.txt  ESPL-Essential-Industries-Usa-En-040725-24.txt  ESPL-Essential-Industries-Usa-En-040725-4.txt  ESPL-Guyson-International-Gbr-En-070725-21.txt  ESPL-Guyson-International-Gbr-En-070725-4.txt  ESPL-Hamilton-Company-Gbr-En-070725-12.txt  ESPL-Hamilton-Company-Gbr-En-070725-3.txt  ESPL-Microbiologics-Usa-En-210525-16.txt  ESPL-Microbiologics-Usa-En-210525-3.txt  ESPL-Seal-Group-Gbr-En-070725-24.txt  ESPL-Seal-Group-Gbr-En-070725-5.txt  ESPL-Solvay-Usa-En-070425-12.txt  ESPL-Solvay-Usa-En-070425-27.txt  ESPL-Topline-Paint-Aus-En-160625-11.txt  ESPL-Topline-Paint-Aus-En-160625-39.txt  ESPL-Wepak-Usa-En-160625-20.txt  ESPL-Wepak-Usa-En-160625-6.txt
